# C-program

./: .gitignore  CMakeLists.txt  README.md  apple.txt  main.c  main.cpp  test
Daily/: CMakeLists.txt  daily.c  main.c
Screens/MainScreen/: MainScreen.c  MainScreen.h  MainScreenFunctions.c  MainScreenFunctions.h
sqlite/: readme.md
sqlite/daily/: daily.c  daily.h
sqlite/weekly/: weekly.c  weekly.h
src/: style.css  test.ui
src/MainScreen/: MainScreen.css  MainScreen.ui
weekly/: CMakeLists.txt  readme.md  weekly.c
